
    HADOOP-11628. SPNEGO auth does not work with CNAMEs in JDK8.
    (Daryn Sharp via stevel)

    HADOOP-11685. StorageException complaining " no lease ID" during HBase
    distributed log splitting (Duo Xu via cnauroth)

    HADOOP-12440. TestRPC#testRPCServerShutdown did not produce the desired
    thread states before shutting down. (Xiao Chen via mingma)

    HADOOP-12758. Extend CSRF Filter with UserAgent Checks
    (Larry McCay via cnauroth)

    HADOOP-12366. expose calculated paths (aw)

    HADOOP-12059. S3Credentials should support use of CredentialProvider.
    (Sean Busbey via wang)

    HADOOP-12548. Read s3a creds from a Credential Provider.
    (Larry McCay via cnauroth)

    HADOOP-11031. Design Document for Credential Provider API.
    (Larry McCay via cnauroth)

    HADOOP-12794. Support additional compression levels for GzipCodec.
    (Ravi Mutyala via junping_du)

    HADOOP-12555. WASB to read credentials from a credential provider.
    (Larry McCay via cnauroth)

    HADOOP-12520. Use XInclude in hadoop-azure test configuration to isolate
    Azure Storage account keys for service integration tests. (cnauroth)

    HADOOP-12535. Run FileSystem contract tests with hadoop-azure.
    (Madhumita Chakraborty via cnauroth)

    HADOOP-12853. Change WASB documentation regarding page blob support.
    (Madhumita Chakraborty via cnauroth)

    HADOOP-12825. Log slow name resolutions.
    (Sidharta Seethana via stevel)

    HADOOP-12570. HDFS Secure Mode Documentation updates.
    (Arpit Agarwal via cnauroth)

    HADOOP-12284. UserGroupInformation doAs can throw misleading exception
    (Aaron Dosset via stevel)

    HADOOP-12752. Improve diagnostics/use of envvar/sysprop credential
    propagation (Steve Loughran via cnauroth)

  OPTIMIZATIONS

    HADOOP-7713. dfs -count -q should label output column (Jonathan Allen
    via aw)

    HADOOP-11772. RPC Invoker relies on static ClientCache which has
    synchronized(this) blocks. (wheat9)
